$Id: ChangeLog,v 1.127 2004/10/03 18:34:09 haraldkipp Exp $

2004-10-03  Harald Kipp  <harald.kipp@egnite.de>

	* doc/gen/nut_en.cfg, os/version.c: Set to 3.9.2.

	* conf/arch/arch.nut, conf/repository.nut, conf/tools.nut,
	dev/irqreg.c, arch/arm/init/crtgbaxport2.S, 
	arch/arm/ldscripts/gbaxport2.ld, conf/gbaxport2.conf: 
	Added Nintendo Game Boy Advance with Xport 2.0 from Charmed Labs.

	* conf/dev/dev.nut, include/dev/debug.h, debug_gba.c: 
	Added GBA debug device and made UART SPI dependent from 
	HW_MCU_AVR.

	* dev/usart1avr.c: Set base address to 1, so drivers are
	able to distinguish UART0 from UART1.

	* pro/syslog.c, include/sys/syslog.h: Harvard architecture 
	calls added.

	* os/arch/arm_timer.c: No GBA timer yet, but made it
	compilable.


2004-09-26  Oliver Schulz  <olischulz@web.de>

	* tools/nutconf/nutconf.cpp, tools/nutconf/nutcomponent.c, 
	tools/nutconf/nutcomponent.h, tools/nutconf/nutconfdoc.cpp: Fixed several 
	hundred memory leaks :-). Relative pathes can now be used for source, build 
	and install directory, but doesn't work for samples yet.


2004-09-25  Oliver Schulz  <olischulz@web.de>

	* conf/dev/dev.nut: Light change for separate interrupt stack. Now it depends 
	also on macro HW_MCU_AVR.

	* conf/os/os.nut: Removed configuration for separate interrupt stack, it's now 
	in conf/dev/dev.nut


2004-09-22  Harald Kipp  <harald.kipp@egnite.de>

	* conf/arch/arch.nut, conf/dev/dev.nut, dev/lanc111.c: 
	LAN91C111 driver is configurable, but no ATmega103
	support. Does anybody need this?
	List of devices sorted by platform.

	* conf/dev/dev.nut, dev/irqstack.c, include/dev/irqstack.h, 
	os/arch/avr_thread.c: Separate IRQ stack for AVR is
	configurable.

	* conf/dev/dev.nut, dev/spidigio.c: Configurable ports
	for digital I/O shift register.

	* conf/dev/dev.nut, dev/usart0avr.c, dev/usart0avr.c:
	Configurable handshake ports.


2004-09-19  Harald Kipp  <harald.kipp@egnite.de>

	* app/logtime/logtime.c, app/logtime/Makefile: New application